--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     body {
       margin: 0;
       padding: 0;
-      background: #f5f6fa;
+      background-image: url('khaliva.jpg');
+      background-size: cover;
+      /* background: #011977; */
       font-family: Arial, sans-serif;
     }
 
